# sec-extract

./: .gitignore  README.md  convert_pdf  pyproject.toml
s1extract/: AAOI.html  aaoi.txt  experiment.py  experiment2.py  experiment3.py  output.html  pseudocode
s1extract/api/: CIK0001158114.JSON  sec_api.py  sec_api_download.py
s1extract/download/: sec_api_download.py
s1extract/webpage2html/: aaoi.html  pandoc.html  pandoc.md
sec_api/: index.py
sec_extract/: results_csv.py
sec_extract/download/: __main__.py  sec_api_download.py
sec_extract/extract/: __main__.py  extract_business_management.py
sec_extract/manual_download/: filter  filter.py  open  urls.csv  warnings.csv
sec_extract/resources/: IPO Firm list 2005-2019.csv
tests/: test_s1extract.py
