[tool.poetry]
name = "sec-extract"
version = "0.1.0"
description = ""
authors = ["Fisher Sun <fisher521.fs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ocrmypdf = "^13.4.4"
pikepdf = "^5.1.3"
reportlab = "^3.6.9"
"pdfminer.six" = "^20220506"
PyPDF2 = "^1.27.12"
webpage2html = "^0.3.6"
requests = "^2.27.1"
bs4 = "^0.0.1"
lxml = "^4.8.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
